--- a/src/components/ingredientes/recipientes/recipientes.css
+++ b/src/components/ingredientes/recipientes/recipientes.css
@@ -30,7 +30,8 @@
     justify-content: center;
     margin: 0 10% 15% 10%;
     border-radius: 15px;
-    height: 120px;
+    height: 15vw;
+    min-height: 100px;
     background-color: rgb(176, 198, 178);
     align-items: center;
 }
@@ -38,6 +39,8 @@
 .input {
     background-color: rgb(176, 198, 178);
     border: 3px solid rgb(47, 94, 87);
+    width: 50%;
+    max-width: 300px;
     padding: 4% 16%;
     border-radius: 15px;
 }
