--- a/src/components/ingredientes/recipientes/recipientes.css
+++ b/src/components/ingredientes/recipientes/recipientes.css
@@ -62,6 +62,19 @@
     color: rgb(47, 94, 72);
 }
 
+.guardarBtnVoz {
+    margin: 50px 20px 0 20px;
+    background-color: rgb(213, 55, 11);
+    border: none;
+    border-radius: 15px;
+    padding: 9% 16%;
+    font-family: "Playfair Display", serif;
+    font-weight: 500;
+    font-size: 5vw;
+    letter-spacing: 3px;
+    color: rgb(255, 255, 255);
+}
+
 .volverBtn {
     margin: 20px 20px;
     width: 100%;
